Closed
Bug 590081
Opened 15 years ago
Closed 15 years ago
keywords matching is no longer case insensitive
Categories
(Toolkit :: Places, defect)
Toolkit
Places
Tracking
()
RESOLVED
FIXED
mozilla2.0b5
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: syskin2, Assigned: mak)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
4.48 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b5pre) Gecko/20100823 Minefield/4.0b5pre
Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b5pre) Gecko/20100823 Minefield/4.0b5pre
If you attempt to use bookmarks keyword, and you use an uppercase letter, it won't work
Reproducible: Always
Steps to Reproduce:
1. Make a keyword "g" or "G" for a bookmark
2. Enter "G" in urlbar
Actual Results:
keyword doesn't work
Expected Results:
you go to bookmarked page :)
See bug 572030 comment 30 for possible reason.\
| Reporter | ||
Updated•15 years ago
|
| Assignee | ||
Comment 1•15 years ago
|
||
asking blocking for broken functionality
Assignee: nobody → mak77
Status: UNCONFIRMED → ASSIGNED
blocking2.0: --- → ?
Ever confirmed: true
Flags: in-testsuite?
| Assignee | ||
Updated•15 years ago
|
Blocks: 572030
Keywords: regression
| Assignee | ||
Updated•15 years ago
|
Summary: uppercase keywords are broken → keywords are no more case insensitive
| Reporter | ||
Comment 2•15 years ago
|
||
"no longer case insensitive" is not exactly right - if you make an uppercase keyword, you can still only access by typing it in lowercase.
So it's as if keywords were stored after converting to lowercase, but then matching happens to what was directly typed.
| Assignee | ||
Updated•15 years ago
|
Summary: keywords are no more case insensitive → keywords matching is no more case insensitive
| Assignee | ||
Comment 3•15 years ago
|
||
right, the problem is with the comparator that looks for the requested keyword than the lowercased keyword
Summary: keywords matching is no more case insensitive → keywords matching is no longer case insensitive
Updated•15 years ago
|
blocking2.0: ? → final+
| Assignee | ||
Comment 4•15 years ago
|
||
Attachment #469438 -
Flags: review?(dietrich)
Updated•15 years ago
|
Attachment #469438 -
Flags: review?(dietrich) → review+
| Assignee | ||
Comment 5•15 years ago
|
||
ready to qimport
Attachment #469438 -
Attachment is obsolete: true
Hmm, ToLowerCase does Unicode aware lowercasing. Is that necessary here?
| Assignee | ||
Comment 7•15 years ago
|
||
are you arguing about perf? keywords are nsString and can contain anything
Comment 8•15 years ago
|
||
This was marked as ride-along but doesn't apply on m-c.
Comment 9•15 years ago
|
||
I'd really expect people to set non-ASCII keywords in language that have non-ASCII characters in usual language - e.g. even i German, I'd expect people to use äöü in keywords and expect then to work when using ÄÖÜ in the location bar to call them up.
Comment 10•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b5
| Assignee | ||
Updated•15 years ago
|
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•