Bug 590081 - keywords matching is no longer case insensitive. r=dietrich a=blocking